# svelt

./: Cargo.toml  Dockerfile  README.md  combined_comparison.py  compare_jasmine_output_to_input.py.py  compare_svelt_output_to_input.py  compare_svelt_output_to_inputs.py
src/: almost.rs  arrays.rs  backward.rs  breakends.rs  builders.rs  chroms.rs  construct.rs  disjoint_set.rs  either.rs  errors.rs  exact.rs  expressions.rs  features.rs  heap.rs  homology.rs  inputs.rs  iterators.rs  keys.rs  kmers.rs  kmers_table.rs  lib.rs  main.rs  merge.rs  near_merge.rs  nearest.rs  options.rs  range_joins.rs  record.rs  record_seeker.rs  resolve.rs  row_key.rs  sequence.rs  tables.rs  union_find.rs  vcf_reader.rs
src/distance/: chi_squared.rs  cosine.rs  mod.rs  needleman_wunsch.rs
src/features/: vector.rs
src/kmers/: kmerize.rs
src/merge/: approx.rs  classify.rs  exact.rs  flip.rs  report.rs  union.rs  variant_id.rs
src/sequence/: fasta.rs  vcf.rs
tests/: .gitignore  README.md  analyse-vcf.Rmd  compare-trio.nf  samples.tsv
tests/data/: bad_1.vcf  bad_2.vcf  bad_3.vcf  samples.tsv
tests/scripts/: differences.py  merge-venn.R  positions.py  sample-variants.py  simple-validation.py
tests/tools/mapping/: Dockerfile
tests/tools/sniffles/: Dockerfile
