[package]
name = "svelt"
version = "0.1.21"
edition = "2024"
readme = "README.md"
repository = "https://github.com/drtconway/svelt"

[[bin]]
name = "svelt"

[profile.release]
debug = false

[dependencies]
autocompress = "0.6.0"
base62 = "2.2.1"
blake2 = "0.10.6"
clap = { version = "4.5.42", features = ["derive"] }
datafusion = { version = "49.0.0", features = ["parquet"] }
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
noodles = { version = "0.100.0", features = ["bed", "bgzf", "core", "fasta", "vcf"] }
rayon = "1.10.0"
regex = "1.11.1"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
rand = "0.9.2"
